[package]
name = "timed-map"
description = "Lightweight map implementation that supports expiring entries and fully compatible with both std and no_std environments."
version = "1.3.0"
edition = "2021"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ozmann-industries/timed-map"
homepage = "https://github.com/ozmann-industries/timed-map"
documentation = "https://docs.rs/timed-map"
categories = ["data-structures", "no-std"]
keywords = ["map", "no_std"]

[lib]
doctest = false

[features]
default = ["std"]
rustc-hash = ["dep:rustc-hash"]
std = []
wasm = ["dep:web-time"]

[dependencies]
rustc-hash = { version = "2.0", optional = true }
web-time = { version = "1.1", default-features = false, optional = true }
